components/argo/examples/server/helm/gateway/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-route
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
      sectionName: http # 对应 Gateway 的监听器名称
  hostnames:
    - "argocd-server.dev.test"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
